--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio: ^4.0.6
   progress_indicators: ^1.0.0
   smooth_page_indicator: ^1.0.0+2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
